--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^7.2.0
   liquid_glass_renderer: ^0.1.1-dev.10
+  supabase_flutter: ^2.10.2
 
 dev_dependencies:
   flutter_test:
