--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   liquid_glass_renderer: ^0.1.1-dev.10
   supabase_flutter: ^2.10.2
   provider: ^6.1.5+1
+  lucide_icons_flutter: ^3.1.5
 
 dev_dependencies:
   flutter_test:
