--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lucide_icons_flutter: ^3.1.5
   iconify_flutter: ^0.0.7
   iconamoon: ^0.0.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
