--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.4.1
   path: ^1.9.1
   flutter_launcher_icons: ^0.14.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
