--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path: ^1.9.1
   flutter_launcher_icons: ^0.14.4
   intl: ^0.20.2
+  file_picker: ^10.3.7
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
